# silt

./: .gitignore  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  STATUS.md  silt.cabal
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml  request.yml
.github/workflows/: book.yml  ci.yml
app/: Main.hs
book/: book.toml
book/src/: 01-what-is-silt.md  02-first-program.md  03-sexpr-declarations.md  04-types-claims-defs.md  05-pi-functions.md  06-quantities.md  07-data-match.md  08-normalization.md  09-effects.md  10-words-addresses-pointers.md  11-layouts.md  12-memory-static.md  13-abi-c-freestanding.md  14-limine-contracts.md  15-serial-panic.md  16-boot-info.md  17-frame-seed.md  18-allocator-handoff.md  19-verification.md  20-status-and-guarantees.md  README.md  SUMMARY.md  appendix-a-syntax-reference.md  appendix-b-commands.md  appendix-c-compiler-internals.md  preface.md
book/theme/: silt.css
examples/: abi.silt  bytes.silt  capabilities.silt  data.silt  extern.silt  freestanding.silt  identity.silt  layout-values.silt  limine-panic.silt  limine-protocol.silt  limine-serial.silt  limine.silt  lowlevel.silt  memory.silt  stage1.silt
scripts/: build-public-site.sh  verify-freestanding-backend.sh  verify-limine-bridge.sh  verify-limine-panic-qemu-nix.sh  verify-limine-panic-qemu.sh  verify-limine-qemu-nix.sh  verify-limine-qemu.sh  verify-public.sh  verify-silt-book.sh  verify-stage0-backend.sh  verify-x86_64-elf-backend.sh
site/: package-lock.json  package.json  spago.yaml
site/src/: Main.purs
site/src/Site/: File.js  File.purs  Html.purs
src/Silt/: CLI.hs  Elab.hs  Parse.hs  Source.hs  Syntax.hs
src/Silt/Codegen/: C.hs
support/limine/: limine.conf
support/linker/: x86_64-limine.ld  x86_64-sysv-elf.ld
test/: Spec.hs
test/fixtures/includes/: bad-extension.silt  cycle-a.silt  cycle-b.silt  main.silt  shared.silt  unsafe-parent.silt
