cabal-version:      3.0
name:               silt
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             Silt contributors
maintainer:         Silt contributors
category:           Language
synopsis:           Stage0 bootstrap for the Silt research language
description:
  Stage0 bootstrap checker for an experimental systems language with an
  S-expression surface, a small dependent core, quantities, and freestanding C
  backend evidence.

common common-options
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:
      base >=4.18 && <5
    , containers
    , filepath

executable silt
  import:           common-options
  hs-source-dirs:   app, src
  main-is:          Main.hs
  other-modules:
      Silt.CLI
      Silt.Codegen.C
      Silt.Elab
      Silt.Parse
      Silt.Source
      Silt.Syntax

test-suite silt-test
  import:           common-options
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          Spec.hs
  other-modules:
      Silt.Codegen.C
      Silt.Elab
      Silt.Parse
      Silt.Source
      Silt.Syntax

source-repository head
  type:     git
  location: https://github.com/M-simplifier/silt.git
